@@ -9,6 +9,7 @@
 * Added plan option to create_server() (Samu Voutilainen)
 * Added plans() for getting preconfigured plans (Samu Voutilainen)
 * Added login_user option to create_server() (Samu Voutilainen)
+* Added support for optional extra arguments to create_server() (Samu Voutilainen)
 
 === 1.5.0 / 2016-04-22
 
